--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,46 +16,7 @@
 
         <h:form id="form">
 
-            <p:outputLabel for="rolesysteme" value="Rôle de l'API : "/>
-            <p:selectOneMenu id="rolesysteme" value="#{bb.roleSysteme}" editable="true"
-                             required="true" requiredMessage="Vous devez indiquer le rôle de l'API"
-                             disabled="#{! bb.roleSystemeChangeable}">
-                <f:selectItems value="#{bb.rolesSysteme}"/>
-            </p:selectOneMenu>
-            <h:message for="rolesysteme" errorStyle="color: red"/>
-
-            <h:outputText value="  "/>
-            <h:commandButton value="Nouveau chat" action="#{bb.nouveauChat}"/>
-
-            <h:panelGrid id="paneltotal" columns="3" columnClasses="topAligned,topAligned,topAligned">
-
-                <h:panelGrid id="panelgauche" columns="1">
-                    <h:panelGrid id="questionetreponse" columns="1">
-                        <h:panelGroup>
-                            <h:outputText value="Question :"/>
-                            <button onclick="copyToClipboard('form:question')">Copier question</button>
-                            <button onclick="toutEffacer()">Effacer question et réponse</button>
-                        </h:panelGroup>
-                        <h:inputTextarea id="question" value="#{bb.question}" title="Question"
-                                         cols="50" rows="5"/>
-                        <h:commandButton value="Envoyer la question" action="#{bb.envoyer}"/>
-                        <h:panelGroup>
-                            <h:outputText value="Réponse :"/>
-                            <button onclick="copyToClipboard('form:reponse')">Copier réponse</button>
-                        </h:panelGroup>
-                        <h:inputTextarea id="reponse" value="#{bb.reponse}" title="Réponse"
-                                         cols="50" rows="15"/>
-                    </h:panelGrid>
-                </h:panelGrid>
-
-                <h:panelGrid id="paneldroit" columns="1" style="vertical-align: top;">
-                    <h:panelGroup>
-                        <h:outputText value="Conversation :"/>
-                        <button onclick="copyToClipboard('form:conversation')">Copier conversation</button>
-                    </h:panelGroup>
-                    <h:inputTextarea id="conversation" rows="30" cols="50" readonly="true"
-                                     value="#{bb.conversation}" title="Conversation entière"/>
-                </h:panelGrid>
+            <h:panelGrid id="paneltotal" columns="1" columnClasses="topAligned">
 
                 <h:panelGrid id="panelrag" columns="1" style="vertical-align: top;">
                     <h:panelGroup>
